--- a/public/landpageAdmin.html
+++ b/public/landpageAdmin.html
@@ -10,7 +10,8 @@
       href="img/proveguard-low-resolution-logo-color-on-transparent-background.png"
     />
     <link href="css/reset.css" rel="stylesheet" />
-    <link href="css/landpage.css" rel="stylesheet" />
+    <link href="css/general.css" rel="stylesheet" />
+    <link href="css/landpageAdmin.css" rel="stylesheet" />
   </head>
 
   <body>
