pagina usuarios creada

--- a/public/editProfile.html
+++ b/public/editProfile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Bienvenido a SICA</title>
+    <title>SICA - Editar perfil</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
