--- a/public/landpageAdmin.html
+++ b/public/landpageAdmin.html
@@ -38,9 +38,9 @@
         <div class="logo search-icon" title="Buscar">
           <img src="img/search-interface-symbol.png" alt="user-icon" />
         </div>
-        <div class="logo hamburguer">
-          <img src="img/icons8-hamburger-menu-24.png" alt="user-icon" />
-        </div>
+        <button type="button" class="buttons" onclick="Logout()">
+          Cerrar Sesión
+        </button>
       </div>
     </header>
 
