Redireccionamiento a otros html

--- a/public/login.html
+++ b/public/login.html
@@ -16,7 +16,7 @@
 
   <body>
     <header class="header">
-      <div class="logo">
+      <div id="prove-logo" class="logo">
         <img
           src="img/proveguard-low-resolution-logo-color-on-transparent-background.png"
           alt="Logo ProveGuard"
