--- a/public/editProfile.html
+++ b/public/editProfile.html
@@ -16,7 +16,7 @@
 
   <body>
     <header class="header">
-      <div class="logo" title="Inicio">
+      <div id="prove-logo" class="logo" title="Inicio">
         <img
           src="img/proveguard-low-resolution-logo-color-on-transparent-background.png"
           alt="Logo ProveGuard"
@@ -28,11 +28,11 @@
           <li><a href="#">Traslados</a></li>
           <li><a href="#">Bitácora</a></li>
           <li><a href="#">Reportes</a></li>
-          <li><a href="#">Manejo de usuarios</a></li>
+          <li><a href="usuarios.html">Manejo de usuarios</a></li>
         </ul>
       </nav>
       <div class="left-nav">
-        <div class="logo user-icon" title="Perfil">
+        <div id="user-icon" class="logo user-icon" title="Perfil">
           <img src="img/user-icon.png" alt="user-icon" />
         </div>
         <div class="logo search-icon" title="Buscar">
@@ -119,9 +119,9 @@
         <li><a href="#">Ayuda</a></li>
       </ul>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="js/utils.js"></script>
     <script src="js/Services/sessionService.js"></script>
     <script src="js/Controllers/sessionController.js"></script>
-    <script src="js/utils.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </body>
 </html>
