--- a/public/usuarios.html
+++ b/public/usuarios.html
@@ -16,7 +16,7 @@
 
   <body>
     <header class="header">
-      <div class="logo" title="Inicio">
+      <div id="prove-logo" class="logo" title="Inicio">
         <img
           src="img/proveguard-low-resolution-logo-color-on-transparent-background.png"
           alt="Logo ProveGuard"
@@ -32,7 +32,7 @@
         </ul>
       </nav>
       <div class="left-nav">
-        <div class="logo user-icon" title="Perfil">
+        <div id="user-icon" class="logo user-icon" title="Perfil">
           <img src="img/user-icon.png" alt="user-icon" />
         </div>
         <div class="logo search-icon" title="Buscar">
