--- a/public/landpageAdmin.html
+++ b/public/landpageAdmin.html
@@ -28,7 +28,7 @@
           <li><a href="#">Traslados</a></li>
           <li><a href="#">Bitácora</a></li>
           <li><a href="#">Reportes</a></li>
-          <li><a href="usuarios.html">Manejo de usuarios</a></li>
+          <li><a href="users.html">Manejo de usuarios</a></li>
         </ul>
       </nav>
       <div class="left-nav">
