Funcionalidad de boton de editar

--- a/public/editProfile.html
+++ b/public/editProfile.html
@@ -20,7 +20,7 @@
         <img
           src="img/proveguard-low-resolution-logo-color-on-transparent-background.png"
           alt="Logo ProveGuard"
-        /><span id="rol">Rol: Admin</span>
+        /><span id="rol"></span>
       </div>
       <nav>
         <ul class="nav-links">
