--- a/public/users.html
+++ b/public/users.html
@@ -10,7 +10,7 @@
       href="img/proveguard-low-resolution-logo-color-on-transparent-background.png"
     />
     <link href="css/reset.css" rel="stylesheet" />
-    <link href="css/usuarios.css" rel="stylesheet" />
+    <link href="css/users.css" rel="stylesheet" />
     <link href="css/general.css" rel="stylesheet" />
   </head>
 
@@ -20,7 +20,7 @@
         <img
           src="img/proveguard-low-resolution-logo-color-on-transparent-background.png"
           alt="Logo ProveGuard"
-        /><span id="rol">Rol: Admin</span>
+        /><span id="rol"></span>
       </div>
       <nav>
         <ul class="nav-links">
@@ -48,12 +48,17 @@
       <h2 class="subtitles">Administración de Usuarios</h2>
       <div class="page-buttons">
         <div class="inputs">
-          <button type="button" class="buttons">Agregar Usuario</button>
-          <button type="button" class="buttons">Eliminar Usuario</button>
+          <button type="button" id="edit" class="buttons">Editar</button>
+          <button type="button" id="add" class="buttons">
+            Agregar Usuario
+          </button>
+          <button type="button" id="delete" class="buttons">
+            Eliminar Usuario
+          </button>
         </div>
         <div class="inputs">
-          <button type="button" class="buttons">Aceptar</button>
-          <button type="button" class="buttons">Cancelar</button>
+          <button type="button" id="accept" class="buttons">Aceptar</button>
+          <button type="button" id="cancel" class="buttons">Cancelar</button>
         </div>
       </div>
       <table>
@@ -87,9 +92,10 @@
         <li><a href="#">Ayuda</a></li>
       </ul>
     </footer>
+    <script src="js/utils.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/Services/sessionService.js"></script>
     <script src="js/Controllers/sessionController.js"></script>
-    <script src="js/utils.js"></script>
+    <script src="js/Controllers/usersController.js"></script>
   </body>
 </html>
