--- a/public/editProfile.html
+++ b/public/editProfile.html
@@ -27,7 +27,7 @@
           <li><a href="#">Registro / Edición de activos</a></li>
           <li><a href="#">Traslados</a></li>
           <li><a href="#">Bitácora</a></li>
-          <li><a href="#">Reportes</a></li>
+          <li><a href="reportes.html">Reportes</a></li>
           <li><a href="users.html">Manejo de usuarios</a></li>
         </ul>
       </nav>
