--- a/public/landpageOthers.html
+++ b/public/landpageOthers.html
@@ -26,7 +26,7 @@
         <ul class="nav-links">
           <li><a href="#">Traslados</a></li>
           <li><a href="#">Bitácora</a></li>
-          <li><a href="#">Reportes</a></li>
+          <li><a href="reportes.html">Reportes</a></li>
         </ul>
       </nav>
       <div class="left-nav">
