--- a/public/users.html
+++ b/public/users.html
@@ -27,8 +27,8 @@
           <li><a href="#">Registro / Edición de activos</a></li>
           <li><a href="#">Traslados</a></li>
           <li><a href="#">Bitácora</a></li>
-          <li><a href="#">Reportes</a></li>
-          <li><a href="#">Manejo de usuarios</a></li>
+          <li><a href="reportes.html">Reportes</a></li>
+          <li><a href="users.html">Manejo de usuarios</a></li>
         </ul>
       </nav>
       <div class="left-nav">
