Modulo estado de registros completo

--- a/public/editProfile.html
+++ b/public/editProfile.html
@@ -24,9 +24,13 @@
       </div>
       <nav>
         <ul class="nav-links">
-          <li><a href="#">Registro / Edición de activos</a></li>
+          <li>
+            <a href="registroDeActivosAdmin.html"
+              >Registro / Edición de activos</a
+            >
+          </li>
           <li><a href="#">Traslados</a></li>
-          <li><a href="#">Bitácora</a></li>
+          <li><a href="bitacora.html">Bitácora</a></li>
           <li><a href="reportes.html">Reportes</a></li>
           <li><a href="users.html">Manejo de usuarios</a></li>
         </ul>
@@ -71,7 +75,9 @@
           <input type="password" id="txt-new-pass" />
         </div>
         <div class="inputs">
-          <button class="buttons disabled" type="button">Aceptar</button>
+          <button class="buttons disabled" type="button" onclick="Validation()">
+            Aceptar
+          </button>
           <button class="buttons disabled" type="button">Cancelar</button>
         </div>
       </div>
