--- a/public/landpageOthers.html
+++ b/public/landpageOthers.html
@@ -24,8 +24,11 @@
       </div>
       <nav>
         <ul class="nav-links">
+          <li>
+            <a href="registroDeActivosUsuario.html">Registro de activos</a>
+          </li>
           <li><a href="#">Traslados</a></li>
-          <li><a href="#">Bitácora</a></li>
+          <li><a href="bitacora.html">Bitácora</a></li>
           <li><a href="reportes.html">Reportes</a></li>
         </ul>
       </nav>
@@ -66,9 +69,9 @@
       </ul>
     </footer>
 
+    <script src="js/utils.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/Services/sessionService.js"></script>
     <script src="js/Controllers/sessionController.js"></script>
-    <script src="js/utils.js"></script>
   </body>
 </html>
