--- a/public/bitacora.html
+++ b/public/bitacora.html
@@ -24,9 +24,13 @@
       </div>
       <nav>
         <ul class="nav-links">
-          <li><a href="#">Registro / Edición de activos</a></li>
+          <li>
+            <a href="registroDeActivosAdmin.html"
+              >Registro / Edición de activos</a
+            >
+          </li>
           <li><a href="#">Traslados</a></li>
-          <li><a href="#">Bitácora</a></li>
+          <li><a href="bitacora.html">Bitácora</a></li>
           <li><a href="reportes.html">Reportes</a></li>
           <li><a href="users.html">Manejo de usuarios</a></li>
         </ul>
@@ -92,20 +96,21 @@
       </div>
     </main>
 
-    <footer class="footer">
-      <div class="company-name">
-        <h2>ProveGuard &copy;2023</h2>
-      </div>
-      <div class="copyright">
-        <h2>SICA - Sistema de Control de Activos</h2>
-        <h2>BotWeb Team</h2>
-      </div>
-      <ul class="nav-links">
-        <li><a href="#">Contacto</a></li>
-        <li><a href="#">Sedes</a></li>
-        <li><a href="#">Ayuda</a></li>
-      </ul>
-    </footer>
+    <!-- <footer class="footer"> -->
+    <!--   <div class="company-name"> -->
+    <!--     <h2>ProveGuard &copy;2023</h2> -->
+    <!--   </div> -->
+    <!--   <div class="copyright"> -->
+    <!--     <h2>SICA - Sistema de Control de Activos</h2> -->
+    <!--     <h2>BotWeb Team</h2> -->
+    <!--   </div> -->
+    <!--   <ul class="nav-links"> -->
+    <!--     <li><a href="#">Contacto</a></li> -->
+    <!--     <li><a href="#">Sedes</a></li> -->
+    <!--     <li><a href="#">Ayuda</a></li> -->
+    <!--   </ul> -->
+    <!-- </footer> -->
+
     <script src="js/utils.js"></script>
     <script src="js/Services/sessionService.js"></script>
     <script src="js/Controllers/sessionController.js"></script>
