--- a/public/estadoDeSolicitudesUsuario.html
+++ b/public/estadoDeSolicitudesUsuario.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Bienvenido a SICA</title>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SICA-Registro / Edición de activos</title>
     <link
       rel="icon"
       type=""
       href="img/proveguard-low-resolution-logo-color-on-transparent-background.png"
     />
     <link href="css/reset.css" rel="stylesheet" />
-    <link href="css/landpageAdmin.css" rel="stylesheet" />
     <link href="css/general.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/estadoDeSolicitudesUsuario.css" />
   </head>
 
   <body>
@@ -20,7 +21,7 @@
         <img
           src="img/proveguard-low-resolution-logo-color-on-transparent-background.png"
           alt="Logo ProveGuard"
-        /><span id="rol"></span>
+        /><span id="rol">Rol: Usuario</span>
       </div>
       <nav>
         <ul class="nav-links">
@@ -47,16 +48,41 @@
         </button>
       </div>
     </header>
-
     <main>
-      <div class="center-container">
-        <div class="logo user-icon" title="Perfil">
-          <img src="img/user-icon-black.png" alt="user-icon" />
+      <div class="container">
+        <div class="subtitles">
+          <br /><br />
+          <h2>Estados de solicitudes</h2>
+          <br />
+          <div class="buscarActivos">
+            <input
+              type="search"
+              placeholder="Nombre o ID de activo"
+              id="buscarNombreActivo"
+            />
+          </div>
+          <div class="fecha">
+            <input type="date" id="buscarFecha" />
+          </div>
+          <div class="botonBuscar">
+            <button>Buscar</button>
+          </div>
         </div>
-        <div id="welcome-message"></div>
       </div>
+      <table>
+        <thead>
+          <tr>
+            <th>Nombre de la solicitud</th>
+            <th>ID del activo</th>
+            <th>Estado</th>
+            <th>Fecha</th>
+            <th>Usuario</th>
+            <th>Codigo</th>
+          </tr>
+        </thead>
+        <tbody id="table-body"></tbody>
+      </table>
     </main>
-
     <footer class="footer">
       <div class="company-name">
         <h2>ProveGuard &copy;2023</h2>
@@ -71,10 +97,5 @@
         <li><a href="#">Ayuda</a></li>
       </ul>
     </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="js/Services/sessionService.js"></script>
-    <script src="js/Controllers/sessionController.js"></script>
-    <script src="js/utils.js"></script>
   </body>
 </html>
