--- a/public/historialUsuario.html
+++ b/public/historialUsuario.html
@@ -25,9 +25,13 @@
       </div>
       <nav>
         <ul class="nav-links">
-          <li><a href="#">Registro / Edición de activos</a></li>
+          <li>
+            <a href="registroDeActivosAdmin.html"
+              >Registro / Edición de activos</a
+            >
+          </li>
           <li><a href="#">Traslados</a></li>
-          <li><a href="#">Bitácora</a></li>
+          <li><a href="bitacora.html">Bitácora</a></li>
           <li><a href="reportes.html">Reportes</a></li>
           <li><a href="users.html">Manejo de usuarios</a></li>
         </ul>
