Corrección de modulo de registro [validación]

--- a/public/bitacora.html
+++ b/public/bitacora.html
@@ -96,20 +96,20 @@
       </div>
     </main>
 
-    <!-- <footer class="footer"> -->
-    <!--   <div class="company-name"> -->
-    <!--     <h2>ProveGuard &copy;2023</h2> -->
-    <!--   </div> -->
-    <!--   <div class="copyright"> -->
-    <!--     <h2>SICA - Sistema de Control de Activos</h2> -->
-    <!--     <h2>BotWeb Team</h2> -->
-    <!--   </div> -->
-    <!--   <ul class="nav-links"> -->
-    <!--     <li><a href="#">Contacto</a></li> -->
-    <!--     <li><a href="#">Sedes</a></li> -->
-    <!--     <li><a href="#">Ayuda</a></li> -->
-    <!--   </ul> -->
-    <!-- </footer> -->
+    <footer class="footer">
+      <div class="company-name">
+        <h2>ProveGuard &copy;2023</h2>
+      </div>
+      <div class="copyright">
+        <h2>SICA - Sistema de Control de Activos</h2>
+        <h2><a href="landpageEquipo.html">BotWeb Team</a></h2>
+      </div>
+      <ul class="nav-links">
+        <li><a href="#">Contacto</a></li>
+        <li><a href="#">Sedes</a></li>
+        <li><a href="#">Ayuda</a></li>
+      </ul>
+    </footer>
 
     <script src="js/utils.js"></script>
     <script src="js/Services/sessionService.js"></script>
