--- a/public/historialUsuario.html
+++ b/public/historialUsuario.html
@@ -64,7 +64,7 @@
     </div>
     <div class="copyright">
       <h2>SICA - Sistema de Control de Activos</h2>
-      <h2>BotWeb Team</h2>
+      <h2><a href="landpageEquipo.html">BotWeb Team</a></h2>
     </div>
     <ul class="nav-links">
       <li><a href="#">Contacto</a></li>
