--- a/public/estadoDeSolicitudesUsuario.html
+++ b/public/estadoDeSolicitudesUsuario.html
@@ -31,8 +31,8 @@
             >
           </li>
           <li><a href="#">Traslados</a></li>
-          <li><a href="bitacora.html">Bitácora</a></li>
-          <li><a href="reportes.html">Reportes</a></li>
+          <li><a href="#">Bitácora</a></li>
+          <li><a href="#">Reportes</a></li>
           <li><a href="users.html">Manejo de usuarios</a></li>
         </ul>
       </nav>
