--- a/public/login.html
+++ b/public/login.html
@@ -57,7 +57,7 @@
 
     <footer class="footer">
       <div class="copyright">
-        <h2>BotWeb Team</h2>
+        <h2><a href="landpageEquipo.html">BotWeb Team</a></h2>
         <h2>ProveGuard &copy;2023</h2>
       </div>
     </footer>
