--- a/public/registroDeActivosAdmin.html
+++ b/public/registroDeActivosAdmin.html
@@ -31,8 +31,8 @@
             >
           </li>
           <li><a href="#">Traslados</a></li>
-          <li><a href="bitacora.html">Bitácora</a></li>
-          <li><a href="reportes.html">Reportes</a></li>
+          <li><a href="#">Bitácora</a></li>
+          <li><a href="#">Reportes</a></li>
           <li><a href="users.html">Manejo de usuarios</a></li>
         </ul>
       </nav>
@@ -93,6 +93,9 @@
                 <option value="sedeAlajuela">Sede Alajuela</option>
               </select>
             </div>
+            <div class="button">
+              <button type="submit">Registrar</button>
+            </div>
           </form>
         </div>
         <div class="descripcion">
@@ -105,23 +108,22 @@
             placeholder=" Descripcion del activo que desea registrar"
           ></textarea>
         </div>
-        <button type="submit" class="buttons">Registrar</button>
       </div>
     </main>
-    <!-- <footer class="footer"> -->
-    <!--   <div class="company-name"> -->
-    <!--     <h2>ProveGuard &copy;2023</h2> -->
-    <!--   </div> -->
-    <!--   <div class="copyright"> -->
-    <!--     <h2>SICA - Sistema de Control de Activos</h2> -->
-    <!--     <h2>BotWeb Team</h2> -->
-    <!--   </div> -->
-    <!--   <ul class="nav-links"> -->
-    <!--     <li><a href="#">Contacto</a></li> -->
-    <!--     <li><a href="#">Sedes</a></li> -->
-    <!--     <li><a href="#">Ayuda</a></li> -->
-    <!--   </ul> -->
-    <!-- </footer> -->
+    <footer class="footer">
+      <div class="company-name">
+        <h2>ProveGuard &copy;2023</h2>
+      </div>
+      <div class="copyright">
+        <h2>SICA - Sistema de Control de Activos</h2>
+        <h2>BotWeb Team</h2>
+      </div>
+      <ul class="nav-links">
+        <li><a href="#">Contacto</a></li>
+        <li><a href="#">Sedes</a></li>
+        <li><a href="#">Ayuda</a></li>
+      </ul>
+    </footer>
     <script src="js/utils.js"></script>
     <script src="js/Services/sessionService.js"></script>
     <script src="js/Controllers/sessionController.js"></script>
