--- a/public/registroDeActivosUsuario.html
+++ b/public/registroDeActivosUsuario.html
@@ -31,8 +31,8 @@
             >
           </li>
           <li><a href="#">Traslados</a></li>
-          <li><a href="bitacora.html">Bitácora</a></li>
-          <li><a href="reportes.html">Reportes</a></li>
+          <li><a href="#">Bitácora</a></li>
+          <li><a href="#">Reportes</a></li>
           <li><a href="users.html">Manejo de usuarios</a></li>
         </ul>
       </nav>
@@ -93,6 +93,9 @@
                 <option value="sedeAlajuela">Sede Alajuela</option>
               </select>
             </div>
+            <div class="button">
+              <button type="submit">Enviar solicitud</button>
+            </div>
           </form>
         </div>
         <div class="descripcion">
@@ -105,7 +108,6 @@
             placeholder=" Descripcion del activo que desea registrar"
           ></textarea>
         </div>
-        <button type="submit" class="buttons">Enviar solicitud</button>
       </div>
     </main>
     <footer class="footer">
