Corrección de título en loginpage

--- a/public/login.html
+++ b/public/login.html
@@ -23,7 +23,7 @@
         />
       </div>
       <div class="welcome-title">
-        <h1>Sistema de Control de Inventario de ProveGuard</h1>
+        <h1>Sistema de Control de Activos de ProveGuard</h1>
       </div>
       <nav>
         <ul class="nav-links">
