--- a/public/login.html
+++ b/public/login.html
@@ -63,6 +63,7 @@
     </footer>
 
     <script src="js/utils.js"></script>
+    <script src="js/testDB.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/Services/sessionService.js"></script>
     <script src="js/Services/loginService.js"></script>
