#7 Corrección de links de redireccionamiento faltantes

--- a/public/estadoTraslado.html
+++ b/public/estadoTraslado.html
@@ -23,9 +23,13 @@
         /><span id="rol"></span>
       </div>
       <ul class="nav-links">
-        <li><a href="#">Registro / Edición de activos</a></li>
         <li>
-          <a href="#">Traslados</a>
+          <a href="ingresoRegistroActivosUsuario.html"
+            >Registro / Edición de activos</a
+          >
+        </li>
+        <li>
+          <a href="formularioTraslados.html">Traslados</a>
           <ul class="submenu">
             <li>
               <a href="./formularioTraslados.html"
