--- a/public/formularioTraslados.html
+++ b/public/formularioTraslados.html
@@ -20,15 +20,15 @@
         id="rol"></span>
     </div>
     <ul class="nav-links">
-      <li><a href="#">Registro / Edición de activos</a></li>
-      <li><a href="#">Traslados</a>
+      <li><a href="ingresoRegistroActivosAdmin.html">Registro / Edición de activos</a></li>
+      <li><a href="formularioTraslados.html">Traslados</a>
         <ul class="submenu">
           <li><a href="./formularioTraslados.html">Nueva solicitud de traslado</a></li>
           <li><a href="./estadoTraslado.html">Estado de la solicitud</a></li>
         </ul>
       </li>
-      <li><a href="#">Bitácora</a></li>
-      <li><a href="#">Reportes</a></li>
+      <li><a href="bitacora.html">Bitácora</a></li>
+      <li><a href="reportes.html">Reportes</a></li>
       <li><a href="users.html">Manejo de usuarios</a></li>
     </ul>
     <div class="left-nav">
@@ -137,7 +137,7 @@
     </div>
     <div class="copyright">
       <h2>SICA - Sistema de Control de Activos</h2>
-        <h2><a href="landpageEquipo.html">BotWeb Team</a></h2>
+      <h2><a href="landpageEquipo.html">BotWeb Team</a></h2>
     </div>
     <ul class="nav-links">
       <li><a href="#">Contacto</a></li>
