--- a/public/ingresoRegistroActivosAdmin.html
+++ b/public/ingresoRegistroActivosAdmin.html
@@ -30,9 +30,9 @@
               >Registro / Edición de activos</a
             >
           </li>
-          <li><a href="#">Traslados</a></li>
-          <li><a href="#">Bitácora</a></li>
-          <li><a href="#">Reportes</a></li>
+          <li><a href="formularioTraslados.html">Traslados</a></li>
+          <li><a href="bitacora.html">Bitácora</a></li>
+          <li><a href="reportes.html">Reportes</a></li>
           <li><a href="users.html">Manejo de usuarios</a></li>
         </ul>
       </nav>
@@ -77,5 +77,8 @@
         <li><a href="#">Ayuda</a></li>
       </ul>
     </footer>
+    <script src="js/utils.js"></script>
+    <script src="js/Services/sessionService.js"></script>
+    <script src="js/Controllers/sessionController.js"></script>
   </body>
 </html>
