--- a/public/users.html
+++ b/public/users.html
@@ -20,7 +20,7 @@
     <nav>
       <ul class="nav-links">
         <li><a href="registroDeActivosAdmin.html">Registro / Edición de activos</a></li>
-        <li><a href="#">Traslados</a></li>
+        <li><a href="formularioTraslados.html">Traslados</a></li>
         <li><a href="bitacora.html">Bitácora</a></li>
         <li><a href="reportes.html">Reportes</a></li>
         <li><a href="users.html">Manejo de usuarios</a></li>
