--- a/public/bitacora.html
+++ b/public/bitacora.html
@@ -29,7 +29,7 @@
               >Registro / Edición de activos</a
             >
           </li>
-          <li><a href="#">Traslados</a></li>
+          <li><a href="formularioTraslados.html">Traslados</a></li>
           <li><a href="bitacora.html">Bitácora</a></li>
           <li><a href="reportes.html">Reportes</a></li>
           <li><a href="users.html">Manejo de usuarios</a></li>
@@ -110,7 +110,6 @@
         <li><a href="#">Ayuda</a></li>
       </ul>
     </footer>
-
     <script src="js/utils.js"></script>
     <script src="js/Services/sessionService.js"></script>
     <script src="js/Controllers/sessionController.js"></script>
