--- a/public/historialBitacora.html
+++ b/public/historialBitacora.html
@@ -21,7 +21,7 @@
     <nav>
       <ul class="nav-links">
         <li><a href="registroDeActivosAdmin.html">Registro / Edición de activos</a></li>
-        <li><a href="#">Traslados</a></li>
+        <li><a href="formularioTraslados.html">Traslados</a></li>
         <li><a href="bitacora.html">Bitácora</a></li>
         <li><a href="reportes.html">Reportes</a></li>
         <li><a href="users.html">Manejo de usuarios</a></li>
@@ -109,14 +109,11 @@
                   <a href="#" class="bt num">5</a>
                   <a href="#" class="bt next">></a>
                   <a href="#" class="bt last">>></a>
-
         </div>
       </div>
     </div>
     </div>
   </main>
-
-
 </body>
 <footer class="footer">
   <div class="company-name">
