--- a/public/historialBodega.html
+++ b/public/historialBodega.html
@@ -30,7 +30,7 @@
               >Registro / Edición de activos</a
             >
           </li>
-          <li><a href="#">Traslados</a></li>
+          <li><a href="formularioTraslados.html">Traslados</a></li>
           <li><a href="bitacora.html">Bitácora</a></li>
           <li><a href="reportes.html">Reportes</a></li>
           <li><a href="users.html">Manejo de usuarios</a></li>
