#25 Login con credenciales extraidas de MongoDB

--- a/public/forgotPass.html
+++ b/public/forgotPass.html
@@ -60,10 +60,11 @@
       </div>
     </footer>
 
-    <script src="js/utils.js"></script>
-    <script src="js/testDB.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="js/Services/sessionService.js"></script>
+
+    <script src="js/utils.js"></script>
+    <script src="js/Services/generalService.js"></script>
     <script src="js/Services/loginService.js"></script>
     <script src="js/Controllers/forgotPassController.js"></script>
   </body>
