--- a/public/formularioTraslados.html
+++ b/public/formularioTraslados.html
@@ -146,11 +146,13 @@
     </ul>
   </footer>
 
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="js/Services/sessionService.js"></script>
+
+  <script src="js/utils.js"></script>
+  <script src="js/Services/generalService.js"></script>
   <script src="js/Controllers/sessionController.js"></script>
   <script src="js/Controllers/transfersController.js"></script>
-  <script src="js/utils.js"></script>
 </body>
 
 </html>
