--- a/public/historialUnidad.html
+++ b/public/historialUnidad.html
@@ -73,8 +73,10 @@
       <li><a href="#">Ayuda</a></li>
     </ul>
   </footer>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="js/Services/sessionService.js"></script>
-  <script src="js/Controllers/sessionController.js"></script>
+
   <script src="js/utils.js"></script>
+  <script src="js/Services/generalService.js"></script>
+  <script src="js/Controllers/sessionController.js"></script>
 </html>
