--- a/public/ingresoRegistroActivosUsuario.html
+++ b/public/ingresoRegistroActivosUsuario.html
@@ -82,8 +82,11 @@
       </ul>
     </footer>
 
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <script src="js/utils.js"></script>
-    <script src="js/Services/sessionService.js"></script>
+    <script src="js/Services/generalService.js"></script>
     <script src="js/Controllers/sessionController.js"></script>
   </body>
 </html>
