--- a/public/landpageOthers.html
+++ b/public/landpageOthers.html
@@ -69,9 +69,11 @@
       </ul>
     </footer>
 
-    <script src="js/utils.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="js/Services/sessionService.js"></script>
+
+    <script src="js/utils.js"></script>
+    <script src="js/Services/generalService.js"></script>
     <script src="js/Controllers/sessionController.js"></script>
   </body>
 </html>
